# voluntariado-lacrei-challenge

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: cd-staging.yml  cd.yml  ci.yml  terraform-production.yml  terraform-staging.yml  terraform.yml
app/: asgi.py  settings.py  urls.py  wsgi.py
app/appointments/: apps.py  models.py  serializers.py  urls.py  views.py
app/appointments/migrations/: 0001_initial.py  0002_appointment_uuid.py
app/core/: urls.py  views.py
app/professionals/: apps.py  serializers.py  services.py  urls.py  views.py
app/professionals/migrations/: 0001_initial.py  0002_remove_professional_address_address.py  0003_professional_uuid.py
app/professionals/models/: __init__.py  address.py  contact.py  professional.py
docker/: Dockerfile.ci  Dockerfile.prod
docs/: api-reference.md  authentication.md  deployment.md  getting-started.md  postman_collection.json  schema.yaml  security.md  technical-decisions-and-limitations.md  testing.md  user-data-migration.md
hooks/: pre-commit  pre-commit.sample  pre-push.sample
scripts/: upload-scripts-to-s3.sh
terraform/: ec2.tf  ecr.tf  iam.tf  outputs.tf  provider.tf  rds.tf  security.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/production/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/templates/: user_data.sh
tests/: conftest.py  test_appointments.py  test_health.py  test_professionals.py
(+25 files in other folders)
